添加了样式，调整了代码格式

--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!doctype html>
 <html lang="zh">
-    <head>
-        <meta charset="utf-8">
-        <title>贪吃蛇</title>
-        <script src="js/jquery-1.11.1.min.js"></script>
-        <script src="js/snake.js"></script>
-        <script>
-            $(document).ready(function () {
-                snake.start();
-            });
-        </script>
-    </head>
-    <body>
-        <canvas id="game" width="1000" height="800"></canvas>
-    </body>
+<head>
+    <meta charset="utf-8">
+    <title>贪吃蛇</title>
+    <script src="js/jquery-1.11.1.min.js"></script>
+    <script src="js/snake.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/snake.css"/>
+    <script>
+        $(document).ready(function () {
+            snake.start();
+        });
+    </script>
+</head>
+<body>
+<canvas id="game" width="300" height="200"></canvas>
+</body>
 </html>
